--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 sklearn==0.0
 statsmodels==0.9.0
+# Required for using statsmodel.api, though is not installed automatically with statsmodels package.
+scipy==1.1.0
 pandas==0.23.0
