feat: Update application

--- a/dayliopy/etc/app.conf
+++ b/dayliopy/etc/app.conf
@@ -26,3 +26,10 @@ mood4: good
 mood3: meh
 mood2: fugly
 mood1: awful
+
+# Example of alternatives for local conf.
+# mood5: amazing
+# mood4: happy
+# mood3: average
+# mood2: sad
+# mood1: horrible
