--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-sklearn==0.0
-statsmodels~=0.9
-# Required for using statsmodel.api, though it is not installed automatically with statsmodels package.
-scipy~=1.1
-pandas~=0.23
+statsmodels~=0.12.2
+# Required by statsmodels but must be installed directly.
+scipy~=1.7.1
+pandas~=1.3.3
