--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,10 @@
-flake8~=3.9
-pylint~=2.11
-pylint-exit~=1.2
+black>=20.8b1
+isort>=5.7.0
 
-black~=21.9b0
-isort~=5.9
+flake8>=3.8
+pylint>=2.6
+pylint-exit>=1.2
+
+mypy>=0.800
+
+pytest>=6.2
