Apply suggestions from code review
style improvements, revert import and gitignore, documentation improvements. From comments

Co-authored-by: Michael Currin <18750745+MichaelCurrin@users.noreply.github.com>

--- a/dayliopy/etc/app.conf
+++ b/dayliopy/etc/app.conf
@@ -20,7 +20,8 @@ db_dir: %(var_dir)s/data_out/db.sqlite
 
 
 [daylio]
-# Labels for high to low moods. Comma separate if you use Daylio Pro's multiple moods feature. 
+# Labels for high to low moods. 
+# Use comma-separated values if you use Daylio Pro's multiple moods feature. 
 # In that case, make sure not to use "," in your mood title. Rename it in Daylio first.
 mood5: rad
 mood4: good
