--- a/dayliopy/etc/app.template.conf
+++ b/dayliopy/etc/app.template.conf
@@ -3,7 +3,8 @@
 #
 
 [daylio]
-# Labels for high to low moods. Comma separate if you use Daylio Pro's multiple moods feature. 
+# Labels for high to low moods. 
+# Use comma-separated values if you use Daylio Pro's multiple moods feature. 
 # In that case, make sure not to use "," in your mood title. Rename it in Daylio first.
 mood5: amazing
 mood2: sad
