added sample multiple moods config and csv

--- a/dayliopy/etc/app.template.conf
+++ b/dayliopy/etc/app.template.conf
@@ -6,6 +6,9 @@
 # Labels for high to low moods. 
 # Use comma-separated values if you use Daylio Pro's multiple moods feature. 
 # In that case, make sure not to use "," in your mood title. Rename it in Daylio first.
+# See moods 2 - 4 below as an example that match sample_multiple_moods.csv
 mood5: amazing
-mood2: sad
+mood4: good, Refreshed
+mood3: OK, ok but sleepy
+mood2: sad, bad, Anxious
 mood1: horrible
