--- a/dayliopy/etc/app.template.conf
+++ b/dayliopy/etc/app.template.conf
@@ -1,14 +1,9 @@
-
-# Local config file.
-#
+# Local config file
 
 [daylio]
-# Labels for high to low moods. 
-# Use comma-separated values if you use Daylio Pro's multiple moods feature. 
-# In that case, make sure not to use "," in your mood title. Rename it in Daylio first.
-# See moods 2 - 4 below as an example that match sample_multiple_moods.csv
-mood5: amazing
-mood4: good, Refreshed
-mood3: OK, ok but sleepy
-mood2: sad, bad, Anxious
-mood1: horrible
+# Labels for high to low moods. See Configuration in docs for help.
+# mood5:
+# mood4:
+# mood3: 
+# mood2:
+# mood1:
