--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-statsmodels~=0.12.2
+statsmodels==0.13.5
 # Required by statsmodels but must be installed directly.
-scipy~=1.7.1
-pandas~=1.3.3
+scipy==1.10.1
+pandas==1.5.3
